--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "boilerplate",
+  "name": "music api fun",
   "version": "1.0.0",
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-      "start": "index.js",
+      "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrew Mead",
