--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music api fun",
+  "name": "music-api-fun",
   "version": "1.0.0",
   "description": "Simple react app",
   "main": "index.js",
