--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.2",
+    "cheerio": "^0.22.0",
     "express": "^4.13.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
