--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.15.2",
     "cheerio": "^0.22.0",
     "express": "^4.13.4",
+    "mongod": "^1.3.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0"
