--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.2",
+    "bcrypt": "^1.0.1",
+    "body-parser": "^1.15.2",
     "cheerio": "^0.22.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
+    "fs": "0.0.1-security",
     "mongod": "^1.3.0",
+    "pg": "^6.1.2",
     "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0"
   },
